--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="rahul R" content="">
     <link rel="icon" href="https://image.flaticon.com/icons/png/512/229/229800.png">
     <title>Dice Roller</title>
+    <link href="https://cdn.jsdelivr.net/holder/2.9.0/holder.min.js" rel="scripts">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cover.css" rel="stylesheet">
 </head>
@@ -18,25 +19,37 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h3 class="masthead-brand">Dice Roller</h3>
+                <h3 class="masthead-brand" style="color: #FFFFFF">Dice Roller</h3>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="#">Refresh</a>
+                    <a class="nav-link" href="#">Reset</a>
                 </nav>
             </div>
         </header>
 
         <main role="main" class="inner cover">
-            <h1 class="cover-heading">Pick A Side</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <h1 class="cover-heading " style="color: #FFFFFF">Pick A Side</h1>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card mb-4 ">
+                        <img class="card-img-top dark-bgm" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top dark-bgm" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
+                    </div>
+                </div>
+            </div>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                <a href="#" class="btn btn-lg btn-secondary">Refresh</a>
             </p>
         </main>
 
         <footer class="mastfoot mt-auto">
             <div class="inner">
-                <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                <p>Cover template for Dice Roller</p>
             </div>
         </footer>
     </div>
