--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-4 ">
-                        <img class="card-img-top dark-bgm" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
+                        <img class="card-img-top dark-bgm" id="left" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card mb-4 box-shadow">
-                        <img class="card-img-top dark-bgm" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
+                        <img class="card-img-top dark-bgm" id="right" data-src="holder.js/100px225" alt="Card image cap" src='images/dice1.png'>
                     </div>
                 </div>
             </div>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary">Refresh</a>
+                <a href="#" class="btn btn-lg btn-secondary" id="refresh">Refresh</a>
             </p>
         </main>
 
@@ -51,6 +51,7 @@
             <div class="inner">
                 <p>Cover template for Dice Roller</p>
             </div>
+            <script src="js/simple.js"></script>
         </footer>
     </div>
 </body>
