--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h3 class="masthead-brand" style="color: #FFFFFF">Dice Roller</h3>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link active" href="#">Home</a>
-                    <a class="nav-link" href="#">Reset</a>
+                    <a class="nav-link" href="#" id="reset">Reset</a>
                 </nav>
             </div>
         </header>
