--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
 
         <main role="main" class="inner cover">
-            <h1 class="cover-heading " style="color: #FFFFFF">Pick A Side</h1>
+            <h1 class="cover-heading " id="header" style="color: #FFFFFF">Pick A Side</h1>
             <br>
             <div class="row">
                 <div class="col-md-6">
