--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="inner">
                 <h3 class="masthead-brand" style="color: #FFFFFF">Dice Roller</h3>
                 <nav class="nav nav-masthead justify-content-center">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link active" id="home" href="#">Home</a>
                     <a class="nav-link" href="#" id="reset">Reset</a>
                 </nav>
             </div>
@@ -52,6 +52,7 @@
                 <p>Cover template for Dice Roller</p>
             </div>
             <script src="js/simple.js"></script>
+            <script src="js/bootstrap.min.js"></script>
         </footer>
     </div>
 </body>
